--- a/Proyecto_Comisaria/src/vistas/MultasIntroducir.form
+++ b/Proyecto_Comisaria/src/vistas/MultasIntroducir.form
@@ -39,7 +39,7 @@
                           <Group type="102" attributes="0">
                               <Component id="ImporteSpinner" min="-2" pref="94" max="-2" attributes="0"/>
                               <EmptySpace max="32767" attributes="0"/>
-                              <Component id="BotonCrear" min="-2" max="-2" attributes="0"/>
+                              <Component id="InsertarMulta" min="-2" max="-2" attributes="0"/>
                           </Group>
                           <Group type="102" attributes="0">
                               <Group type="103" groupAlignment="0" attributes="0">
@@ -103,7 +103,7 @@
                       <Group type="103" groupAlignment="3" attributes="0">
                           <Component id="jLabel5" alignment="3" min="-2" max="-2" attributes="0"/>
                           <Component id="ImporteSpinner" alignment="3" min="-2" max="-2" attributes="0"/>
-                          <Component id="BotonCrear" alignment="3" min="-2" max="-2" attributes="0"/>
+                          <Component id="InsertarMulta" alignment="3" min="-2" max="-2" attributes="0"/>
                       </Group>
                   </Group>
                   <Component id="jScrollPane1" min="-2" max="-2" attributes="0"/>
@@ -139,12 +139,12 @@
         <Property name="text" type="java.lang.String" value="Importe"/>
       </Properties>
     </Component>
-    <Component class="javax.swing.JButton" name="BotonCrear">
+    <Component class="javax.swing.JButton" name="InsertarMulta">
       <Properties>
         <Property name="text" type="java.lang.String" value="Insertar Multa"/>
       </Properties>
       <Events>
-        <EventHandler event="actionPerformed" listener="java.awt.event.ActionListener" parameters="java.awt.event.ActionEvent" handler="BotonCrearActionPerformed"/>
+        <EventHandler event="actionPerformed" listener="java.awt.event.ActionListener" parameters="java.awt.event.ActionEvent" handler="InsertarMultaActionPerformed"/>
       </Events>
     </Component>
     <Component class="javax.swing.JTextField" name="DescripcionField">
