--- a/Proyecto_Comisaria/src/vistas/MultasIntroducir.form
+++ b/Proyecto_Comisaria/src/vistas/MultasIntroducir.form
@@ -149,11 +149,14 @@
     </Component>
     <Component class="javax.swing.JTextField" name="DescripcionField">
       <Properties>
+        <Property name="toolTipText" type="java.lang.String" value="Descripci&#xf3;n de Multa"/>
         <Property name="border" type="javax.swing.border.Border" editor="org.netbeans.modules.form.editors2.BorderEditor">
           <Border info="org.netbeans.modules.form.compat2.border.LineBorderInfo">
             <LineBorder roundedCorners="true"/>
           </Border>
         </Property>
+        <Property name="dragEnabled" type="boolean" value="true"/>
+        <Property name="name" type="java.lang.String" value="" noResource="true"/>
       </Properties>
       <Events>
         <EventHandler event="actionPerformed" listener="java.awt.event.ActionListener" parameters="java.awt.event.ActionEvent" handler="DescripcionFieldActionPerformed"/>
@@ -208,7 +211,7 @@
     </Component>
     <Component class="com.toedter.calendar.JDateChooser" name="FechaChooser">
       <Properties>
-        <Property name="dateFormatString" type="java.lang.String" value="yyyy-MM-dd HH:mm:ss"/>
+        <Property name="dateFormatString" type="java.lang.String" value="yyyy-MM-dd HH:mm:s"/>
       </Properties>
     </Component>
   </SubComponents>
