--- a/Proyecto_Comisaria/src/vistas/Principal.form
+++ b/Proyecto_Comisaria/src/vistas/Principal.form
@@ -7,9 +7,6 @@
   </NonVisualComponents>
   <Properties>
     <Property name="defaultCloseOperation" type="int" value="3"/>
-    <Property name="preferredSize" type="java.awt.Dimension" editor="org.netbeans.beaninfo.editors.DimensionEditor">
-      <Dimension value="[1200, 628]"/>
-    </Property>
   </Properties>
   <SyntheticProperties>
     <SyntheticProperty name="formSizePolicy" type="int" value="1"/>
@@ -36,26 +33,16 @@
           <Group type="102" attributes="0">
               <EmptySpace max="-2" attributes="0"/>
               <Group type="103" groupAlignment="0" attributes="0">
-                  <Group type="102" alignment="0" attributes="0">
-                      <Group type="103" groupAlignment="0" attributes="0">
-                          <Component id="btt_lista" alignment="0" min="-2" pref="94" max="-2" attributes="0"/>
-                          <Component id="jSeparator2" alignment="0" min="-2" pref="163" max="-2" attributes="0"/>
-                          <Component id="btt_multas" alignment="0" min="-2" pref="94" max="-2" attributes="0"/>
-                          <Component id="btt_policias" alignment="0" min="-2" pref="94" max="-2" attributes="0"/>
-                      </Group>
-                      <EmptySpace pref="481" max="32767" attributes="0"/>
-                      <Group type="103" groupAlignment="0" attributes="0">
-                          <Group type="102" alignment="1" attributes="0">
-                              <Component id="jScrollPane1" min="-2" pref="536" max="-2" attributes="0"/>
-                              <EmptySpace max="-2" attributes="0"/>
-                          </Group>
-                          <Component id="reloj" alignment="1" min="-2" pref="127" max="-2" attributes="0"/>
-                      </Group>
-                  </Group>
-                  <Group type="102" alignment="0" attributes="0">
-                      <Component id="jSeparator1" min="-2" pref="163" max="-2" attributes="0"/>
-                      <EmptySpace max="32767" attributes="0"/>
-                  </Group>
+                  <Component id="btt_lista" alignment="0" min="-2" pref="94" max="-2" attributes="0"/>
+                  <Component id="jSeparator2" alignment="0" min="-2" pref="163" max="-2" attributes="0"/>
+                  <Component id="btt_multas" alignment="0" min="-2" pref="94" max="-2" attributes="0"/>
+                  <Component id="btt_policias" alignment="0" min="-2" pref="94" max="-2" attributes="0"/>
+                  <Component id="jSeparator1" alignment="0" min="-2" pref="163" max="-2" attributes="0"/>
+              </Group>
+              <EmptySpace pref="491" max="32767" attributes="0"/>
+              <Group type="103" groupAlignment="0" attributes="0">
+                  <Component id="reloj" alignment="1" min="-2" pref="127" max="-2" attributes="0"/>
+                  <Component id="jScrollPane1" alignment="1" min="-2" pref="536" max="-2" attributes="0"/>
               </Group>
           </Group>
       </Group>
@@ -65,20 +52,18 @@
           <Group type="102" alignment="0" attributes="0">
               <EmptySpace max="-2" attributes="0"/>
               <Group type="103" groupAlignment="0" attributes="0">
-                  <Component id="jScrollPane1" min="-2" pref="104" max="-2" attributes="0"/>
-                  <Group type="102" alignment="0" attributes="0">
-                      <Component id="btt_multas" min="-2" pref="91" max="-2" attributes="0"/>
-                      <EmptySpace min="-2" pref="35" max="-2" attributes="0"/>
-                      <Component id="jSeparator1" min="-2" pref="10" max="-2" attributes="0"/>
-                      <EmptySpace min="-2" pref="30" max="-2" attributes="0"/>
-                      <Component id="btt_policias" min="-2" pref="91" max="-2" attributes="0"/>
-                      <EmptySpace min="-2" pref="37" max="-2" attributes="0"/>
-                      <Component id="jSeparator2" min="-2" pref="10" max="-2" attributes="0"/>
-                      <EmptySpace type="separate" max="-2" attributes="0"/>
-                      <Component id="btt_lista" min="-2" pref="91" max="-2" attributes="0"/>
-                  </Group>
+                  <Component id="btt_multas" min="-2" pref="91" max="-2" attributes="0"/>
+                  <Component id="jScrollPane1" min="-2" pref="122" max="-2" attributes="0"/>
               </Group>
-              <EmptySpace pref="139" max="32767" attributes="0"/>
+              <EmptySpace max="-2" attributes="0"/>
+              <Component id="jSeparator1" min="-2" pref="10" max="-2" attributes="0"/>
+              <EmptySpace min="-2" pref="30" max="-2" attributes="0"/>
+              <Component id="btt_policias" min="-2" pref="91" max="-2" attributes="0"/>
+              <EmptySpace min="-2" pref="37" max="-2" attributes="0"/>
+              <Component id="jSeparator2" min="-2" pref="10" max="-2" attributes="0"/>
+              <EmptySpace type="separate" max="-2" attributes="0"/>
+              <Component id="btt_lista" min="-2" pref="91" max="-2" attributes="0"/>
+              <EmptySpace pref="137" max="32767" attributes="0"/>
               <Component id="reloj" min="-2" pref="65" max="-2" attributes="0"/>
           </Group>
       </Group>
