--- a/Proyecto_Comisaria/src/vistas/Principal.form
+++ b/Proyecto_Comisaria/src/vistas/Principal.form
@@ -38,6 +38,7 @@
                   <Component id="btt_multas" alignment="0" min="-2" pref="94" max="-2" attributes="0"/>
                   <Component id="btt_policias" alignment="0" min="-2" pref="94" max="-2" attributes="0"/>
                   <Component id="jSeparator1" alignment="0" min="-2" pref="163" max="-2" attributes="0"/>
+                  <Component id="BotonCargar" min="-2" pref="115" max="-2" attributes="0"/>
               </Group>
               <EmptySpace pref="491" max="32767" attributes="0"/>
               <Group type="103" groupAlignment="0" attributes="0">
@@ -63,8 +64,14 @@
               <Component id="jSeparator2" min="-2" pref="10" max="-2" attributes="0"/>
               <EmptySpace type="separate" max="-2" attributes="0"/>
               <Component id="btt_lista" min="-2" pref="91" max="-2" attributes="0"/>
-              <EmptySpace pref="137" max="32767" attributes="0"/>
-              <Component id="reloj" min="-2" pref="65" max="-2" attributes="0"/>
+              <EmptySpace pref="90" max="32767" attributes="0"/>
+              <Group type="103" groupAlignment="0" attributes="0">
+                  <Component id="reloj" alignment="1" min="-2" pref="65" max="-2" attributes="0"/>
+                  <Group type="102" alignment="1" attributes="0">
+                      <Component id="BotonCargar" min="-2" pref="77" max="-2" attributes="0"/>
+                      <EmptySpace min="-2" pref="35" max="-2" attributes="0"/>
+                  </Group>
+              </Group>
           </Group>
       </Group>
     </DimensionLayout>
@@ -139,5 +146,13 @@
         </Component>
       </SubComponents>
     </Container>
+    <Component class="javax.swing.JButton" name="BotonCargar">
+      <Properties>
+        <Property name="text" type="java.lang.String" value="Cargar Policias"/>
+      </Properties>
+      <Events>
+        <EventHandler event="actionPerformed" listener="java.awt.event.ActionListener" parameters="java.awt.event.ActionEvent" handler="BotonCargarActionPerformed"/>
+      </Events>
+    </Component>
   </SubComponents>
 </Form>
